--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "prebuild": "rimraf dist",
     "build": "tsc -p .",
-    "start": "node dist/index.js",
-    "dev": "nodemon src/index.ts"
+    "start": "node dist/src/index.js",
+    "dev": "SET NODE_ENV=development&&nodemon src/index.ts"
   },
   "keywords": [],
   "author": "",
